[package]
name = "tower-abci"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint-proto = { git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/rebase_v0.23.0" }
bytes = "1"
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["full"]}
pin-project = "1"
futures = "0.3"
tracing = "0.1.30"
prost = "0.9.0"
tracing-tower = { git = "https://github.com/tokio-rs/tracing/", tag = "tracing-subscriber-0.3.8"}

[dev-dependencies]
structopt = "0.3"
tracing-subscriber = "0.3.8"

[features]
doc = []

[patch.crates-io]
"tracing" = {git = "https://github.com/tokio-rs/tracing/", tag = "tracing-subscriber-0.3.8"}